fixed alignment of the page, added info to html 	modified:   index.html : removed bootstrap 	modified:   layers/job.html : added some info 	modified:   layers/me.html : added some info 	modified:   stylesheet.css : added min-heights, min-width, 	overflow.auto to popup, webkit-scrollbar, popup #p

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,6 +1,25 @@
+::-webkit-scrollbar {  
+    width: 12px;  
+}  
+::-webkit-scrollbar-track {  
+    background-color: #eaeaea;  
+    border-left: 1px solid #ccc;  
+}  
+::-webkit-scrollbar-thumb { 
+    background-color: #ccc;  
+}  
+::-webkit-scrollbar-thumb:hover {  
+    background-color: #aaa;  
+}  
+
+
 body {
 	position: absolute;
-    top: 0; right: 0; bottom: 0; left: 0;
+    top: 0; 
+    right: 0; 
+    bottom: 0; 
+    left: 0;
+    margin: 0;
 }
 
 svg {
@@ -9,7 +28,10 @@ svg {
 
 #main {
 	position: absolute;
-	top: 0; right: 0; bottom: 0; left: 0;
+	top: 0; 
+	right: 0; 
+	bottom: 0; 
+	left: 0;
 	width: 100%;
 	height: 100%;
 }
@@ -18,27 +40,34 @@ svg {
 	position: absolute;
 	width: 100%;
 	height: 100%;
+	min-width: 1150px;
+	min-height: 605px
 }
 #popup {
 	display: none;
+	position: absolute;
 	top: 0;
 	bottom: 5%;
-	position: absolute;
 	right: 5%;
 	width: 25%;
-	background-color: #00CCFF;
+	min-width: 500px;
 	opacity: 0.75;
-	border-radius: 10px;
 	padding: 20px;
+	overflow: auto;
+	border-bottom-left-radius: 10px;
+	border-bottom-right-radius: 10px;
 }
 #popup h1 {
 	font-family: 'Comic Sans MS';
 	text-align: center;
 	font-size: 3em;
 	color: white;
-	opacity: 0.9;
 }
-
+#popup p {
+	font-family: 'Comic Sans MS';
+	font-size: 1.5em;
+	text-align: justify;
+}
 #popup img {
 	height: 200px;
 	width: 200px;
